--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "An app that builds out a cover letter using a template and the options input my the user",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack -p",
+    "build:dev": "webpack -d --watch",
+    "start": "node server/server.js",
+    "start:dev": "nodemon server/server.js"
   },
   "repository": {
     "type": "git",
