--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "mongoose": "^5.3.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "shortid": "^2.2.14"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
