--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.15.6",
     "mongoose": "^5.3.3",
     "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
